syntax = "proto3";
package penumbra.core.component.distributions.v1;

// Distribution configuration data.
message DistributionsParameters {
  // The amount of staking token issued per block.
  uint64 staking_issuance_per_block = 1;
  // The amount of staking token flowing from the community pool to the liquidity tournament each block.
  uint64 liquidity_tournament_incentive_per_block = 2;
}

// Genesis data for the distributions module.
message GenesisContent {
  DistributionsParameters distributions_params = 1;
}
